--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "bcryptjs": "^2.4.3",
-    "concurrently": "^5.3.0"
+    "concurrently": "^5.3.0",
+    "connect-mongodb-session": "^2.4.1",
+    "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "material-table": "^1.69.2"
   }
 }
